fixed button spacing

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -518,7 +518,7 @@ h4 {
     width: 100%; }
   .social-programme-inner .social-programme-item button {
     background-color: #01a0b8;
-    padding: 12px 100px;
+    padding: 12px 60px;
     margin-top: 30px;
     font-size: 1.3em;
     color: #fff; }
