--- a/src/scss/partials/_main.scss
+++ b/src/scss/partials/_main.scss
@@ -81,7 +81,7 @@
     }
     button {
       background-color: #01a0b8;
-      padding: 12px 100px;
+      padding: 12px 60px;
       margin-top: 30px;
       font-size: 1.3em;
       color: #fff;
